src/objects/Apttus_Config2__OrderSystemProperties__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__AgreementFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AgreementFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AgreementItemFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Item Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AgreementItemFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Item Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteItemFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Item Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteItemFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Item Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitOrderCriteriaFields__c</fullName>
        <description>The criteria fields used to split a large order</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The list of Order Line item fields used to split items added during a large order process into multiple orders. Each field API name separated by a comma or a new line.</inlineHelpText>
        <label>Split Order Criteria Fields</label>
        <type>TextArea</type>
    </fields>
</CustomObject>